--- a/react_3/src/App.css
+++ b/react_3/src/App.css
@@ -88,3 +88,11 @@ body {
 .game-info {
   margin-left: 20px;
 }
+
+.buttons {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 150px;
+  gap: 10px;
+}
